making comparison of algorithms observable on da graph
